	done.
	(delicious-search-insert-match): Make links clickable. Stop
	displaying the hash, no one cares about it. Buttonize tags, with
	the action of listing all the posts with that tag.
	(delicious-search-mode-map): Remove binding for return, since
	we're handling that as text property now.
	(delicious-search-mode-map): Fixed bindings for delete and space.

2005-08-03  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-build-posts-list): Added FORCE argument
	to force a refresh from the server. Provide better information
	about which source the posts are being updated from. Check to make
	sure that both FORCE and OFFLINE aren't non-nil at the same
	time. Prefix argument causes the same behavior as FORCE when used
	interactively.
	(delicious-build-posts-list): Small changes to update messages,
	fix message displayed when a prefix is used.

2005-08-01  johnsu01  <john@wjsullivan.net>

	* planner-delicious.el (planner-delicious-read-date): New function
	to prompt for date pattern.
	(planner-delicious-insert-posts): Removed. Replaced by separate
	functions for rewriting and appending.
	(planner-delicious-append-posts): Error if there is no delicious
	section on the page.
	(planner-delicious-append): Name change.
	(planner-delicious-rewrite): New function to rewrite the section.
	(planner-delicious-modify-section): New function to call the
	appropriate modification function.
	(planner-delicious-rewrite-posts-match-all): Name change. Move
	matching and modification functions out.
	(planner-delicious-append-posts-match-all): Name change. Move
	matching and modification functions out.
	(planner-delicious-append-posts-match-any): Name change. Move
	matching and modification functions out.
	(planner-delicious-rewrite-posts-match-any): Name change. Move
	matching and modification functions out.

	* delicious.el (delicious-test-tag-any): Deleted, replaced by
	`delicious-posts-matching-any'.
	(delicious-test-tag-all): Deleted, replaced by